--- a/app/src/main/res/layout/distributorsectiontwo.xml
+++ b/app/src/main/res/layout/distributorsectiontwo.xml
@@ -6,7 +6,7 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Add Retailers"
+    android:text="Add Sellers"
     android:textStyle="bold"
     android:padding="@dimen/sd6"
     android:drawableEnd="@drawable/ic_plus2_24"
