--- a/app/src/main/res/layout/activity_add_salesman.xml
+++ b/app/src/main/res/layout/activity_add_salesman.xml
@@ -25,7 +25,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/sd6"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/customerFormSubmit"
+        app:layout_constraintBottom_toTopOf="@+id/seller_RegisSubmit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="15dp">
+                android:padding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -53,15 +53,15 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/sd20"
+                        android:padding="@dimen/sd16"
                         android:text="Add new \nSalesman"
                         android:textColor="@color/darkgreen"
                         android:textSize="@dimen/sd20"
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:src="@drawable/ic_addform" />
                 </LinearLayout>
 
@@ -87,7 +87,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/loginedittextbg"
                         android:hint="First Name"
-                        android:padding="@dimen/sd6" />
+                        android:padding="@dimen/sd8" />
 
                     <EditText
                         android:layout_width="match_parent"
@@ -97,7 +97,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/loginedittextbg"
                         android:hint="Last Name"
-                        android:padding="@dimen/sd6" />
+                        android:padding="@dimen/sd8" />
                 </LinearLayout>
 
                 <EditText
@@ -108,7 +108,7 @@
                     android:background="@drawable/loginedittextbg"
                     android:hint="Mobile Number"
                     android:inputType="number"
-                    android:padding="@dimen/sd6" />
+                    android:padding="@dimen/sd8" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -118,7 +118,7 @@
                     android:background="@drawable/loginedittextbg"
                     android:hint="Address"
                     android:inputType="number"
-                    android:padding="@dimen/sd6" />
+                    android:padding="@dimen/sd8" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -126,9 +126,9 @@
                     android:layout_marginHorizontal="@dimen/sd10"
                     android:layout_marginVertical="5dp"
                     android:background="@drawable/loginedittextbg"
-                    android:hint="Address"
+                    android:hint="Email - id"
                     android:inputType="number"
-                    android:padding="@dimen/sd6" />
+                    android:padding="@dimen/sd8" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -143,72 +143,46 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/sd4"
-                    android:gravity="center"
                     android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginTop="@dimen/sd2"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Male"
-                    android:layout_weight="1"
-                    />
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Female"
                         android:layout_weight="1"
-                        />
+                        android:text="Male" />
+
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Others"
                         android:layout_weight="1"
-                        />
+                        android:text="Female" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Others" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/sd6"
                     android:gravity="center"
                     android:orientation="horizontal">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_weight="1"
-    android:gravity="center"
-    android:layout_margin="@dimen/sd4"
-    android:padding="@dimen/sd6"
-    android:background="@drawable/loginedittextbg"
-    >
 
-                    <ImageView
-
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:layout_marginHorizontal="@dimen/sd6"
-                        android:layout_weight="1"
-                        android:src="@drawable/ic_upload" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Adhar Front"
-
-        android:textColor="@color/darkgreen"
-        />
-</LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="1"
-                        android:padding="@dimen/sd6"
                         android:layout_margin="@dimen/sd4"
-                        android:gravity="center"
+                        android:layout_weight="1"
                         android:background="@drawable/loginedittextbg"
-                        >
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="@dimen/sd8">
 
                         <ImageView
 
@@ -217,12 +191,38 @@
                             android:layout_marginHorizontal="@dimen/sd6"
                             android:layout_weight="1"
                             android:src="@drawable/ic_upload" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Adhar Front"
+
+                            android:textColor="@color/darkgreen" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/sd4"
+                        android:layout_weight="1"
+                        android:background="@drawable/loginedittextbg"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="@dimen/sd8">
+
+                        <ImageView
+
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:layout_marginHorizontal="@dimen/sd6"
+                            android:layout_weight="1"
+                            android:src="@drawable/ic_upload" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Adhar Back"
-                            android:textColor="@color/darkgreen"
-                            />
+                            android:textColor="@color/darkgreen" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -232,7 +232,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/customerFormSubmit"
+        android:id="@+id/seller_RegisSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/midgreen"
@@ -248,7 +248,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="@dimen/sd14"
-            android:id="@+id/seller_RegisSubmit"
+
             android:text="Submit"
             android:textColor="@color/darkgreen"
             android:textSize="@dimen/sd14"
