--- a/app/src/main/res/layout/activity_distributor_dashboard.xml
+++ b/app/src/main/res/layout/activity_distributor_dashboard.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:orientation="vertical"
     tools:context=".distributors.DistributorDashboard">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <include
         android:id="@+id/headerdistributor"
         layout="@layout/headerdistributor" />
@@ -23,5 +27,7 @@
     <include layout="@layout/distributorsectiontwo"
         android:id="@+id/addSellers"/>
 
-    <include layout="@layout/distributorsectionthree" />
+    <include layout="@layout/distributorsectionthree"
+        android:id="@+id/itemRequest"/>
 </LinearLayout>
+</ScrollView>
