--- a/app/src/main/res/layout/distributorchart.xml
+++ b/app/src/main/res/layout/distributorchart.xml
@@ -12,17 +12,28 @@
     android:gravity="center"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:padding="2dp"
+    >
     <org.eazegraph.lib.charts.PieChart
         android:id="@+id/distibutorpiechart"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
-
-        android:layout_weight="1"
-        android:padding="2dp" />
+        app:egLegendColor="@color/darkgreen"
+app:egInnerValueString="sdf"
+        app:egInnerValueColor="@color/darkgreen"
+        app:egLegendTextSize="@dimen/sd12"
+        app:egInnerValueSize="@dimen/sd12"
+     />
+</LinearLayout>
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_weight="1.3"
+    android:gravity="center"
     android:paddingHorizontal="@dimen/sd10"
     android:padding="@dimen/sd6"
     android:orientation="vertical"
