--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/lightgreen"
     tools:context="com.aenatural.aenaturals.customers.CustomerDashboard">
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/customer_topbarlayout"
+  />
+<include
+    layout="@layout/cust_trendingsection"
+    />
+<include
+    layout="@layout/customerall_items_section"
+    />
+</LinearLayout>
