privacy policy color change

--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    tools:context="com.aenatural.aenaturals.customers.CustomerDashboard"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/lightgreen"
-    tools:context="com.aenatural.aenaturals.customers.CustomerDashboard">
+    >
 
     <include
         layout="@layout/customer_topbarlayout"
@@ -19,3 +29,5 @@
     layout="@layout/customerall_items_section"
     />
 </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
