--- a/app/src/main/res/layout/activity_distributor_dashboard.xml
+++ b/app/src/main/res/layout/activity_distributor_dashboard.xml
@@ -6,6 +6,10 @@
     android:fillViewport="true"
     android:orientation="vertical"
     tools:context=".distributors.DistributorDashboard">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,4 +34,5 @@
     <include layout="@layout/distributorsectionthree"
         android:id="@+id/itemRequest"/>
 </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
