--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -10,12 +10,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/lightgreen"
-        tools:context=".distributors.DistributorProfileActivity"
-        >
+        tools:context=".distributors.DistributorProfileActivity">
 
         <TextView
             android:id="@+id/dist_backTV"
@@ -112,7 +112,8 @@
                 android:background="@color/midgreen"
                 android:padding="@dimen/sd6"
                 android:text="Order History"
-                android:textColor="@color/darkgreen" />
+                android:textStyle="bold"
+                android:textColor="#1B5E20" />
 
 
         </LinearLayout>
@@ -120,53 +121,73 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/customerOrderHistoryRecycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/sd4"
             android:layout_marginVertical="@dimen/sd6"
             app:layout_constraintBottom_toTopOf="@+id/dist_linearLayout10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
-            tools:layout_editor_absoluteX="4dp" />
+            app:layout_constraintVertical_bias="0.549" />
 
         <LinearLayout
             android:id="@+id/dist_linearLayout10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginVertical="@dimen/sd8"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
-                    android:background="@color/midgreen"
                     android:layout_weight="1"
-                    />
+                    android:background="@color/midgreen" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" more "
                     android:layout_marginHorizontal="@dimen/sd4"
                     android:gravity="center"
-                    android:textSize="@dimen/sd12"
+                    android:text=" more "
                     android:textColor="@color/darkgreen"
-                    android:textStyle="bold"
-                    />
+                    android:textSize="@dimen/sd12"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="3dp"
 
-                    android:background="@color/midgreen"
                     android:layout_weight="1"
-                    />
+                    android:background="@color/midgreen" />
 
             </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/sd16"
+                android:layout_marginVertical="@dimen/sd6"
+                android:backgroundTint="@color/midgreen"
+                app:cardCornerRadius="@dimen/sd16">
+
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:layout_width="match_parent"
+                    android:paddingVertical="@dimen/sd6"
+                    android:layout_height="wrap_content"
+                    android:background="@color/midgreen"
+                    app:menu="@menu/customerbottommenu" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
