--- a/app/src/main/res/layout/order_history_design.xml
+++ b/app/src/main/res/layout/order_history_design.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="@dimen/sd8"
     android:layout_marginVertical="@dimen/sd4"
     android:backgroundTint="@color/lightgreen"
-
+    app:cardCornerRadius="@dimen/sd16"
     android:layout_height="wrap_content">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/sd6"
+    android:padding="@dimen/sd10"
     android:orientation="vertical"
     >
 <LinearLayout
