--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,10 @@
     tools:context="com.aenatural.aenaturals.salesmans.fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -57,4 +61,5 @@
             <include layout="@layout/secondbottomsaleslayout" />
         </LinearLayout>
     </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
