--- a/app/src/main/res/layout/bottomsectionsalesdashboard.xml
+++ b/app/src/main/res/layout/bottomsectionsalesdashboard.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/midgreen"
-        android:text="Recent Products"
+        android:text="New Products"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingVertical="6dp"
@@ -20,5 +20,4 @@
         android:layout_height="wrap_content"
         android:id="@+id/salesBottomRecylerView"
         />
-
 </LinearLayout>
