--- a/app/src/main/res/layout/cartrequestlayout.xml
+++ b/app/src/main/res/layout/cartrequestlayout.xml
@@ -78,7 +78,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pay to Request"
+            android:text="Confirm Payment"
             android:textSize="@dimen/sd12"
             android:drawableEnd="@drawable/ic_baseline_payment_24"
             android:textStyle="bold"
