--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -5,41 +5,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     tools:context="com.aenatural.aenaturals.salesmans.fragments.ProductsFragment">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="More"
+    android:textColor="@color/darkgreen"
+    android:textStyle="bold"
+    android:background="@color/midgreen"
+    android:padding="@dimen/sd8"
+    />
 
-
+<include
+    layout="@layout/salesman_more_header"
+    />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/midgreen"
-        android:textColor="@color/black"
-        android:padding="@dimen/sd10"
-        android:textSize="@dimen/sd14"
+        android:text="Pending Orders"
+        android:textColor="@color/darkgreen"
         android:textStyle="bold"
-        android:text="All Products" />
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/allproductsrecyclerview"
+        android:background="@color/midgreen"
+        android:padding="@dimen/sd8"
         />
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/midgreen"
-        android:layout_marginVertical="@dimen/sd8"
-        android:layout_marginHorizontal="@dimen/sd14"
-        app:cardCornerRadius="@dimen/sd12"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add to cart"
-            android:textSize="@dimen/sd14"
-            android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
-            android:textStyle="bold"
-            android:textColor="@color/darkgreen"
-            android:gravity="center"
-            android:padding="@dimen/sd10"
-            />
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
