--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightgreen">#E8F5E9</color>
     <color name="lightgreen2">#C7EEDC</color>
+    <color name="lightgreen3">#E2F6E3</color>
     <color name="midgreen">#AAE1BC</color>
+    <color name="darkmidgreen">#90CDA4</color>
+    <color name="lightmidgreen">#CCF3D2</color>
     <color name="darkgreen">#0C805F</color>
     <color name="gray">#545E5E</color>
     <color name="lightblue">#46A8F6</color>
