--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -1,30 +1,46 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    tools:context="com.aenatural.aenaturals.salesmans.fragments.ProductsFragment">
-<TextView
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="More"
-    android:textColor="@color/darkgreen"
-    android:textStyle="bold"
-    android:background="@color/midgreen"
-    android:padding="@dimen/sd8"
-    />
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
-<include
-    layout="@layout/salesman_more_header"
-    />
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pending Orders"
-        android:textColor="@color/darkgreen"
-        android:textStyle="bold"
-        android:background="@color/midgreen"
-        android:padding="@dimen/sd8"
-        />
-</LinearLayout>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="com.aenatural.aenaturals.salesmans.fragments.ProductsFragment">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/midgreen"
+                android:padding="@dimen/sd8"
+                android:text="More"
+                android:textColor="@color/darkgreen"
+                android:textStyle="bold" />
+
+            <include layout="@layout/salesman_more_header"
+                android:id="@+id/salesman_more_header"
+                />
+
+            <include layout="@layout/pendingorderslayout"
+                android:id="@+id/pendingorderslayout"
+                />
+
+            <include layout="@layout/pending_payment_layout"
+                android:id="@+id/pending_payment_layout"
+                android:visibility="gone"
+                />
+
+            <include layout="@layout/return_order_layout"
+                android:visibility="gone"
+                android:id="@+id/return_order_layout"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
