--- a/app/src/main/res/layout/salesman_more_header.xml
+++ b/app/src/main/res/layout/salesman_more_header.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
+            android:id="@+id/pendingOrderCard"
             app:cardCornerRadius="@dimen/sd16"
             android:backgroundTint="@color/midgreen"
             >
@@ -54,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
             app:cardCornerRadius="@dimen/sd16"
+            android:id="@+id/pendingPaymentCard"
             android:backgroundTint="@color/midgreen"
             >
             <LinearLayout
@@ -93,6 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/sd8"
             app:cardCornerRadius="@dimen/sd16"
+            android:id="@+id/returnOrderCard"
             android:backgroundTint="@color/midgreen"
             >
             <LinearLayout
